
Project
----------------------
* Fixed a bug where value of buildForced was not being reset if modifications were found.

Schedule
----------------------
* Fixed a bug where checkPauseBuilders would not return a value larger than one day.
* Fixed a bug where chained pauses where not respected, with builds happening after the end of the first pause and during the second.

CruiseControl Release Notes - 2.1.3

log4j.properties
----------------------
* Fixed bug where the month was being used in place of minutes.
* Now using abbreviation of month name rather than month number.

MavenBuilderTest
----------------------
* Fixed bug trying to chmod test file on unix. - Patch by Andy Nguyen

CruiseControl Release Notes - 2.1.2

AntBuilder
----------------------
* Fixed a bug in isWindows() that was returning false negatives. This would prevent antScript from working on some Windows systems.

ArtifactsPublisher
----------------------
* Added to the default plugin registrya

build.sh
----------------------
* Fixed problem with eol characters preventing files from executing on unix systems

build.xml
----------------------
* Added ability to specify tests to run from command-line, such as "build test -Dtests=ProjectTest" - Patch by Michael Beauregard

CVSBootstrapper
----------------------
* Add -dP to update command

EmailPublisher
----------------------
* Added nested success element - Patch by Marco Faini
* Added failAsImportant attribute - Patch by Ian MacDonald

FileServlet
----------------------
* Fixed a bug, brower displaying html source code, by adding the mime-type to the response.

HtmlEmailPublisher
----------------------
* Fixed a bug where username & password were ignored

JMX
----------------------
* Now exposing Project status (read-only) in the jmx interface

log4j.properties
----------------------
* Added more information into the console log including the timestamp - Patch by Mark Richters
* Added a rotating file log - Patch by Mark Richters

Project