@@ -16,6 +16,7 @@ Schedule
 ----------------------
 * Fixed a bug where checkPauseBuilders would not return a value larger than one day.
 * Fixed a bug where chained pauses where not respected, with builds happening after the end of the first pause and during the second.
+* Changed schedule to ignore the value of interval when there are only time based builds. This should get rid of most of the "No Builder selected" messages.
 
 CruiseControl Release Notes - 2.1.3
 
